--- a/slutprojekt/prototyp/style.css
+++ b/slutprojekt/prototyp/style.css
@@ -37,6 +37,7 @@ header
     width: 90vw;
 
     border-radius: 15px;
+
 }
 
 .navbar {
@@ -53,5 +54,15 @@ header
 }
 
 .search > input {
+    height: 50px ;
     width: 100% ;
+    
+    /* Shadow för att göra så att search boxen ser ut att stå ut */
+    box-shadow: 0px 0px 20px -10px rgba(0,0,0,0.34);
+    -webkit-box-shadow: 0px 0px 20px -10px rgba(0,0,0,0.34);
+    -moz-box-shadow: 0px 0px 20px -10px rgba(0,0,0,0.34);
+}
+
+.search > input:focus {
+    outline: none;
 }
