--- a/slutprojekt/prototyp/style.css
+++ b/slutprojekt/prototyp/style.css
@@ -161,8 +161,24 @@ section#footer {
 
     height: 100px;
 
-    width: 100%;
+    width: 100vw;
     bottom: 0;
+
+    overflow: hidden;
     
     background-color: #e3e3e3;
+}
+
+#profile-options {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding-right: 10px;
+}
+
+.pfp {
+    max-width: 40px;
+    max-height: 40px;
+
+    border-radius: 50%;
 }
