--- a/slutprojekt/prototyp/style.css
+++ b/slutprojekt/prototyp/style.css
@@ -7,6 +7,7 @@
     margin: 0;
     box-sizing: border-box;
     /* font-family: Georgia, 'Times New Roman', Times, serif; */
+    scroll-behavior: smooth;
 
 }
 
@@ -181,4 +182,49 @@ section#footer {
     max-height: 40px;
 
     border-radius: 50%;
+}
+
+.pagnition {
+    margin-top: 50px;
+}
+  
+.pagnition_button {
+    display: block;
+    font-size: 24px;
+    font-family: sans-serif;
+    text-decoration: none;
+    color: #333;
+    border-top: 2px solid #333;
+    border-bottom: 2px solid #333;
+    padding: 10px;
+    letter-spacing: 2px;
+    transition: all .25s;
+}
+
+.pagnition_button:hover{
+    letter-spacing: 15px;
+}
+
+.search-result {
+    margin-top: 10px;
+}
+
+#goto-top {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 18px;
+    border: none;
+    outline: none;
+    background-color: red;
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 4px;
+}
+  
+#goto-top:hover {
+    background-color: #555;
 }
